[gd_scene load_steps=3 format=3 uid="uid://nswerrow"]

[ext_resource type="Script" path="res://AnswerRow.gd" id="1_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bg"]
bg_color = Color(0.05, 0.05, 0.2, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.2, 0.6, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="AnswerRow" type="PanelContainer"]
custom_minimum_size = Vector2(600, 60)
offset_right = 600.0
offset_bottom = 60.0
theme_override_styles/panel = SubResource("StyleBoxFlat_bg")
script = ExtResource("1_script")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="IndexLabel" type="Label" parent="MarginContainer/HBoxContainer"]
visible = false
layout_mode = 2
text = "1"

[node name="AnswerLabel" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 28
text = "ODPOWIEDÅ¹"
uppercase = true

[node name="PointsLabel" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "00"

[node name="CoverPanel" type="Panel" parent="."]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_bg")

[node name="Label" type="Label" parent="CoverPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.2, 0.6, 1, 1)
theme_override_font_sizes/font_size = 32
text = "1"
horizontal_alignment = 1
vertical_alignment = 1
